feat: increasing the new bot funcitonality